--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
       "name": "MrSuddenJoy",
       "email": "wojtek@wojciechxtx.com",
       "homepage": "https://wojciechxtx.com",
-      "role": "development"
+      "role": "Development"
     },
     {
       "name": "Adam Boduch",
