--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ public/js/
 # Secrets
 storage/oauth-p*.key
 # storage/oauth-public.key
+
+# Material
+app/Domain/User/Material
+
+# User\ng
+app/Domain/User/ng
