--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
+/**
+Default IDE settings for project MrSuddenJoy/4programmers.net
+*/
 {
     "workbench.colorTheme": "Default Light Modern",
     "editor.minimap.enabled": true,
